# tartunlp-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  smithery.test.yaml  smithery.yaml
.github/workflows/: docker-build-push.yml
src/tartunlp_mcp_server/: __init__.py  __main__.py  server.py
tartunlp_mcp_server/: __main__.py  server.py
