[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tartunlp-mcp-server"
version = "0.1.0"
description = "MCP server for TartuNLP translation services"
authors = [{name = "tbitu", email = "tarjeib@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "smithery>=0.1.0"
]

[project.scripts]
tartunlp-mcp-server = "tartunlp_mcp_server:main"