[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tartunlp-mcp-server"
version = "0.1.0"
description = "MCP server for TartuNLP translation services"
authors = [{name = "tbitu", email = "tarjeib@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.15.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "smithery>=0.4.2"
]

[project.scripts]
tartunlp-mcp-server = "tartunlp_mcp_server:main"
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"

[tool.smithery]
server = "tartunlp_mcp_server.server:create_server"